spacing fix

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -681,7 +681,7 @@ header .game-text {
   font-size: 2.5vh;
   text-align: center;
   margin: 2vh 5vw 0vh 5vw;
-  padding: 3vh 5vw 0vh 5vw;
+  padding: 7vh 5vw 0vh 5vw;
 }
 
 .game-instructions p {
